--- a/templates/success.html
+++ b/templates/success.html
@@ -26,8 +26,8 @@
     </style>
 </head>
 
-<body>
-    <h1>Welcome to the website...{{message}}</h1>
+<body>.,mnmbnb
+0    <h1>Welcome to the website...{{message}}</h1>
     {% for a in fields%} {{a}} {% endfor%}
     <button><a href="/">LOG OUT</a></button>
 </body>
@@ -38,6 +38,7 @@
 <h1 style="color: white">Welcome to the website...{{message}}</h1>
 <form action="{{url_for('search')}}" method="POST">
     <hr>
+
     <input type="text" name="searchword" placeholder="searchword"><br>
     <hr>
     <button>Search!!</button>
