--- a/templates/registration.html
+++ b/templates/registration.html
@@ -61,6 +61,7 @@
             <input type="password" name="password" placeholder="password"><br>
             <hr>
             <button>Register</button>
+            <!-- <button onclick="{{url_for('login')}}">log in</button> -->
             <hr>
         </form>
 
