--- a/templates/registration.html
+++ b/templates/registration.html
@@ -34,7 +34,7 @@
             font-size: 20px;
         }
         
-        button {
+        #submit {
             font-size: xx-large;
         }
         
@@ -42,25 +42,75 @@
             background-color: gray;
         }
     </style>
-    <link rel="stylesheet" href="design.css">
+    <!-- <link rel="stylesheet" href="design.css"> -->
     <meta name="viewport" content="width = device-width, initial-scale = 1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            document.querySelector('#form').onsubmit = function() {
+                const name = document.querySelector('#name').value;
+                const password = document.querySelector('#password').value;
+                if ((name === "") || (password === "")) {
+                    alert("Error: UserName or Password cannot be blank");
+                    document.querySelector('h3').innerHTML = "missing user name or password"
+                    form.name.focus();
+                    form.password.focus();
+                    return false;
+                }
+                re = /[0-9]/;
+                if (!re.test(password)) {
+                    alert("Error: password must contain at least one number (0-9)!");
+                    form.name.focus();
+                    form.password.focus();
+                    return false;
+                }
+                re = /[a-z]/;
+                if (!re.test(password)) {
+                    alert("Error: password must contain at least one lowercase letter (a-z)!");
+                    form.name.focus();
+                    form.password.focus();
+                    return false;
+                }
+                re = /[A-Z]/;
+                if (!re.test(password)) {
+                    alert("Error: password must contain at least one uppercase letter (A-Z)!");
+                    form.name.focus();
+                    form.password.focus();
+                    return false;
+                }
+                re = /@/;
+                if (!re.test(password)) {
+                    alert("Error: password must contain at least one number (0-9)!");
+                    form.name.focus();
+                    form.password.focus();
+                    return false;
+                }
+
+                return true;
+            };
+            xhr = new XMLHttpRequest();
+            xhr.open("POST", "/elegiblity");
+            xhr.send("name=name")
+
+        });
+    </script>
 </head>
 
 <body>
     <h1 id="h1">{%block heading%}Register Now!{%endblock%}</h1>
     {% block body%}
     <div>
-        <form action="{{url_for('elegiblity')}}" method="POST">
+        <form id="form" action="{{url_for('elegiblity')}}" method="POST">
             <hr>
             <h3>{{message}}</h3>
             <label class="naming" for="name">Full Name: </label>
-            <input type="text" name="name" placeholder="full name"><br>
+            <input type="text" id="name" autocomplete="off" autofocus placeholder="full name"><br>
             <hr>
             <label class="naming" for="password">Enter Password: </label>
-            <input type="password" name="password" placeholder="password"><br>
+            <input type="password" id="password" autocomplete="off" autofocus placeholder="password"><br>
             <hr>
-            <button>Register</button>
+            <!-- <button type="submit">Register</button> -->
+            <input type="submit">
             <hr>
         </form>
 
